Add depth limit functionality